--- a/.github/workflows/lex-impact.yml
+++ b/.github/workflows/lex-impact.yml
@@ -1,4 +1,4 @@
-name: Next.js CI
+name: leximpact CI
 
 on:
   push:
@@ -30,11 +30,11 @@ jobs:
         # working-directory: ./frontend
 
       - name: Build Next.js app
-        run: npm build
+        run: npm run build
         # working-directory: ./frontend
 
       - name: Run tests
-        run: npm test 
+        run: npm run test 
       # working-directory: ./frontend
 
       - name: ✅ All checks passed
