--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "lint:fix": "eslint . --ext js,jsx,ts,tsx --fix",
     "test": "vitest",
     "test:watch": "vitest --watch",
-    "test:ui": "vitest --ui"
+    "test:ui": "vitest --ui",
+    "test:coverage": "vitest run --coverage"
   },
   "dependencies": {
     "@radix-ui/react-checkbox": "^1.1.1",
@@ -25,7 +26,11 @@
     "next-themes": "^0.4.3",
     "prettier": "^3.3.3",
     "react": "19.0.0",
-    "react-dom": "19.0.0"
+    "react-dom": "19.0.0",
+    "@fontsource/montserrat": "^5.1.1",
+    "@radix-ui/themes": "^3.2.0",
+    "classnames": "^2.5.1",
+    "react-icons": "^5.5.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.25.1",
